fix: z-index too low for sortable helper

--- a/src/components/workspace/workspace.less
+++ b/src/components/workspace/workspace.less
@@ -15,6 +15,10 @@
     z-index: 50;
     align-items: center;
 
+    &-sortable-clone {
+      z-index: 50;
+    }
+
     &-container, &-sortable-list {
       flex-grow: 1;
       display: flex;
